--- a/.github/workflows/tf_apply.yml
+++ b/.github/workflows/tf_apply.yml
@@ -12,6 +12,7 @@ env:
   TERRAFORM_VERSION: 1.3.7
   TERRAGRUNT_VERSION: 0.40.2
   AWS_REGION: ca-central-1
+  TF_VAR_postgres_password: ${{ secrets.POSTGRES_PASSWORD }}
 
 
 permissions:
@@ -61,4 +62,12 @@ jobs:
       
       - name: Apply ecs 
         working-directory: terragrunt/env/staging/ecs
+        run: terragrunt apply --terragrunt-non-interactive -auto-approve
+      
+      - name: Apply ssm 
+        working-directory: terragrunt/env/staging/ssm
+        run: terragrunt apply --terragrunt-non-interactive -auto-approve
+
+      - name: Apply rds 
+        working-directory: terragrunt/env/staging/rds
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
